数据源切换

--- a/shard.datasource/src/main/resources/META-INF/environments/dev/db.properties
+++ b/shard.datasource/src/main/resources/META-INF/environments/dev/db.properties
@@ -10,3 +10,5 @@ jdbc.maxWait=60000
 jdbc.suspectTimeout=60
 jdbc.timeBetweenEvictionRunsMillis=30000
 jdbc.minEvictableIdleTimeMillis=60000
+
+jdbc.url2=jdbc:mysql://123.56.4.34:3307/db02?useUnicode=true&characterEncoding=utf-8
