--- a/shard.datasource/pom.xml
+++ b/shard.datasource/pom.xml
@@ -100,6 +100,11 @@
 			<version>1.2</version>
 		</dependency>
 		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.70</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
